# AppleTree

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
scripts/: package-macos-app.sh  prepare-macos-icon.sh
src/: app.rs  bench.rs  lib.rs  main.rs  memory.rs  objc_ffi.rs  settings.rs
src/model/: color.rs  tree.rs
src/scan/: getattrlistbulk.rs
src/ui/: file_icons.rs  mod.rs  tree_view.rs  treemap_view.rs
