[package]
name = "appletree"
version = "0.9.0"
edition = "2024"
description = "fast disk usage visualizer for macOS"
license = "GPL-3.0"

[dependencies]
eframe = "0.34"
egui = "0.34"
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
rayon = "1"
rfd = "0.17"
treemap = "0.3"
